# Voxel_Raytracing

./: CMakeLists.txt  camera.hpp  gl_includes.hpp  imgui.ini  main.cpp  mesh.cpp  mesh.hpp  octree.hpp  shader.cpp  shader.hpp  voxel_array.hpp
resources/: fragmentShader.glsl  vertexShader.glsl
